--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'org.jsoup:jsoup:1.8.3'
     compile 'com.linroid.filtermenu:library:0.2.+@aar'
     compile 'com.github.paolorotolo:appintro:3.3.0'
+    compile 'com.google.android.gms:play-services:8.3.0'
 }
