--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.linroid.filtermenu:library:0.2.+@aar'
     compile 'com.github.paolorotolo:appintro:3.3.0'
     compile 'com.google.android.gms:play-services:8.3.0'
+    compile files('libs/selendroid-standalone-0.17.0-with-dependencies.jar')
 }
