--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -24,6 +24,10 @@
         <activity
             android:name=".AboutUs"
             android:theme="@style/GlassByte" />
+
+        <activity
+            android:name=".IntroActivity"
+            android:theme="@style/IntroTheme"/>
 
         <activity android:name=".Settings">
             <intent-filter>
