updated expenditures to show overall and specific leap expenditures

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,7 @@ dependencies {
     compile 'com.linroid.filtermenu:library:0.2.+@aar'
     compile 'com.github.paolorotolo:appintro:3.3.0'
     compile 'com.google.android.gms:play-services:8.3.0'
+    compile 'com.google.android.gms:play-services-ads:8.3.0'
+    compile 'com.google.android.gms:play-services-identity:8.3.0'
+    compile 'com.google.android.gms:play-services-gcm:8.3.0'
 }
