--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
 
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -22,19 +23,22 @@
         </activity>
 
         <activity
+            android:screenOrientation="portrait"
             android:name=".AboutUs"
             android:theme="@style/GlassByte" />
 
         <activity
+            android:screenOrientation="portrait"
             android:name=".IntroActivity"
             android:theme="@style/IntroTheme"/>
 
-        <activity android:name=".Settings">
+        <activity
+            android:name=".Settings"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="com.syzible.iompar.Settings" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
