--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '23.0.2'
 
     defaultConfig {
-        applicationId "com.syzible.iompar"
+        applicationId "com.glassbyte.iompar"
         minSdkVersion 17
         targetSdkVersion 23
         versionCode 1
