--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.syzible.iompar">
+    package="com.glassbyte.iompar">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -11,14 +11,27 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <activity
+            android:name=".SplashScreen"
+            android:screenOrientation="portrait"
+            android:theme="@style/GlassByte">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="com.glassbyte.iompar.ClearScreen" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
@@ -36,7 +49,7 @@
             android:name=".Settings"
             android:screenOrientation="portrait">
             <intent-filter>
-                <action android:name="com.syzible.iompar.Settings" />
+                <action android:name="com.glassbyte.iompar.Settings" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
