--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,18 +8,17 @@ android {
         applicationId "com.glassbyte.iompar"
         minSdkVersion 17
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "1.11"
         multiDexEnabled true
     }
 
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt')
         }
     }
-    useLibrary 'org.apache.http.legacy'
 }
 
 dependencies {
