--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,14 +8,14 @@ android {
         applicationId "com.glassbyte.iompar"
         minSdkVersion 17
         targetSdkVersion 23
-        versionCode 3
-        versionName "1.11"
+        versionCode 5
+        versionName "1.13"
         multiDexEnabled true
     }
 
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt')
         }
     }
